--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
 	<head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Module 2 CSS practise assignment</title>
-	<link rel = "stylesheet" type = "text/css" href = "style.css" />
+	<link rel = "stylesheet" type = "text/css" href = "css/style.css" />
 	</head>
 	<body>
 	<h1>Our Menu</h1>
-	<div>
-	<h3>Chicky Chicky Bleu Sandwich<h3>
-	Hand-breaded crispy chicken, lettuce, tomato, red onion, avocado, bacon, bleu cheese crumbles, bleu cheese dressing on a brioche bun</div>
-	<div>
-	<h3>Bacon Avocado Grilled Chicken Sandwich<h3>
-	You definitely won't be hungry later. Grilled chicken, bacon, swiss, avocado, sauteed onions, lettuce, tomato, cilantro-pesto mayo on a toasted buttery roll</div>
-	<div>
-	<h3>Buffalo Chicken Ranch Sandwich<h3>
-	Hand-breaded crispy chicken with spicy Buffalo sauce, tomato, lettuce, house-made ranch on a brioche bun</div>	
+	<div class="row">
+	<div  class="col-lg-4 col-md-6 col-sm-12">
+	<h3 class="pink">Chicky Sandwich</h3>
+	<p>Hand-breaded crispy chicken, lettuce, tomato, red onion, avocado, bacon, bleu cheese crumbles, bleu cheese dressing on a brioche bun</p>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12">
+	<h3 class="red">Bacon Sandwich</h3>
+	<p>You definitely won't be hungry later. Grilled chicken, bacon, swiss, avocado, sauteed onions, lettuce, tomato, cilantro-pesto mayo on a toasted buttery roll</p></div>
+	<div  class="col-lg-4 col-md-12 col-sm-12">
+	<h3 class="yellow">Buffalo Sandwich</h3>
+	<p>Hand-breaded crispy chicken with spicy Buffalo sauce, tomato, lettuce, house-made ranch on a brioche bun. It's so delicious!</p></div>	
+	</div>
 	</body>
 </html>
